# modoroco

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  SECURITY.md  SUPPORT.md  TRADEMARK.md  alembic.ini  compose.yaml  firsttask.md  pyproject.toml  rundown.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: architecture_proposal.yml  bug_report.yml  config.yml  feature_request.yml  user_story.yml
.github/workflows/: ci.yml  container.yml  release.yml  security.yml
docs/adr/: 0001-foundation-decisions.md
docs/api/: api-conventions.md
docs/architecture/: persistence-model.md  security-model.md  state-machine.md  system-overview.md
docs/integrations/: hydrion.md
docs/legal/: api-acceptable-use-policy.md  data-retention.md  privacy-policy.md  responsible-disclosure.md  terms-of-service.md  third-party-notices.md
docs/operations/: database-migrations.md  docker-deployment.md  local-development.md
docs/project/: issue-manifest.md  kanban-plan.md
migrations/: env.py  script.py.mako
migrations/versions/: 20260719_0001_initial.py
openapi/: openapi.json
scripts/: generate_openapi.py
src/modoroco/: __init__.py
src/modoroco/application/: service.py
src/modoroco/domain/: __init__.py  session.py
src/modoroco/infrastructure/: __init__.py  auth.py  config.py  database.py
src/modoroco_ui/: __init__.py  app.py  theme.py  timer.py  widgets.py
tests/: test_timer.py
tests/integration/: test_api.py
tests/unit/: test_session_domain.py
(+5 files in other folders)
