[project]
name = "modoroco"
version = "0.1.0"
description = "A refined, native focus timer by The 1807"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "alembic>=1.14,<2",
    "aiosqlite>=0.20,<1",
    "asyncpg>=0.30,<1",
    "fastapi>=0.115,<1",
    "prometheus-client>=0.21,<1",
    "PySide6>=6.8,<7",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "structlog>=25,<27",
    "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<10",
    "pytest-cov>=6,<8",
    "pytest-asyncio>=0.25,<2",
    "httpx>=0.28,<1",
    "hypothesis>=6.120,<7",
    "pyright>=1.1.390,<2",
    "ruff>=0.9,<1",
]

[project.scripts]
modoroco = "modoroco_ui.app:main"
modoroco-api = "modoroco.runtime.api:main"
modoroco-worker = "modoroco.runtime.worker:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modoroco_ui", "src/modoroco"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
"src/modoroco/interfaces/api.py" = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=modoroco --cov=modoroco_ui.timer --cov-report=term-missing"
asyncio_mode = "auto"

[tool.pyright]
include = ["src"]
pythonVersion = "3.10"
typeCheckingMode = "strict"
